reservation caazi fini

--- a/WS2_php-post_bootstrap-Phoenix(BSOnly)/accueil.html
+++ b/WS2_php-post_bootstrap-Phoenix(BSOnly)/accueil.html
@@ -27,8 +27,8 @@
                     </div>
               </div>
   
-              <div class="button-sejour" style="background-color: #fff;">
-                <button type="button" class="btn btn-outline-info col-9">Choisir mon séjour tout de suite !</button>
+              <div class="container button-sejour" style="background-color: #fff;">
+                <a href="?page=catalogue" class="col-12"><button type="button" class="btn btn-outline-info col-12">Choisir mon séjour tout de suite !</button></a>
               </div>
             </main>
 
