--- a/WS2_php-post_bootstrap-Phoenix(BSOnly)/header.html
+++ b/WS2_php-post_bootstrap-Phoenix(BSOnly)/header.html
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
                 
-                <a class="nav-link active" href="?page=acceuil">Phoenix</a>
+                <a class="nav-link active" href="?page=accueil">Phoenix</a>
                 <a class="nav-link" href="?page=catalogue">Choisir une destination</a>
                 <a class="nav-link" href="?page=reservation" >Payer</a>
               </div>
