--- a/WS2_php-post_bootstrap-Phoenix(BSOnly)/catalogue.html
+++ b/WS2_php-post_bootstrap-Phoenix(BSOnly)/catalogue.html
@@ -1,4 +1,5 @@
-<main>
+<main class="container col-9">
+    <link rel="stylesheet" href="./style-catalogue.css">
     <div class="container-fluid carousel-container">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
@@ -21,5 +22,75 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
+    </div>
+    
+    <div class="container flex flex-between card-container">
+        <div class="row flex flex-between">
+            <div class="col-sm col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="./img/caraibes_martinique_boucaniers.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Les Boucaniers</h5>
+                      <p class="card-text danger">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="?page=reservation" class="btn btn-outline-info col-12">Réserver maintenant !</a>
+                    </div>
+                  </div>
+            </div>
+
+              <div class="col-sm col-md-4">
+                  <div class="card" style="width: 18rem;">
+                    <img src="./img/maurice_albion.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Kamarina</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="?page=reservation" class="btn btn-outline-info col-12">Réserver maintenant !</a>
+                    </div>
+                  </div>
+              </div>
+
+              <div class="col-sm col-md-4">
+                  <div class="card" style="width: 18rem;">
+                    <img src="./img/maurice_albion.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Finohlu</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-outline-info col-12">Réserver maintenant !</a>
+                    </div>
+                  </div>
+              </div>
+
+              <div class="col-sm col-md-4">
+                  <div class="card" style="width: 18rem;">
+                    <img src="./img/sicile_kamarina.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Albion sauvage</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-outline-info col-12">Réserver maintenant !</a>
+                    </div>
+                  </div>
+              </div>
+
+              <div class="col-sm col-md-4">
+                  <div class="card" style="width: 18rem;">
+                    <img src="./img/caraibes_martinique_boucaniers.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Kani</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-outline-info col-12">Réserver maintenant !</a>
+                    </div>
+                  </div>
+              </div>
+
+              <div class="col-sm col-md-4">
+                  <div class="card" style="width: 18rem;">
+                    <img src="./img/turkoise.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Gregolimano</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-outline-info col-12">Réserver maintenant !</a>
+                    </div>
+                  </div>
+              </div>
+        </div>
     </div>
 </main>
